objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Re_Order__c</fullName>
        <label>Can Re-Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Origin__c</fullName>
        <defaultValue>&quot;Internal&quot;</defaultValue>
        <description>The Channel that was used to create the Contact</description>
        <inlineHelpText>The Channel that was used to create the Contact</inlineHelpText>
        <label>Channel Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Support Community</fullName>
                </value>
                <value>
                    <fullName>Email - The Bay</fullName>
                </value>
                <value>
                    <fullName>Email - LT</fullName>
                </value>
                <value>
                    <fullName>Email - Executive Escalation</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Live Agent</fullName>
                </value>
                <value>
                    <fullName>Email - Store Operation</fullName>
                </value>
                <value>
                    <fullName>Email - Service Excellence</fullName>
                </value>
                <value>
                    <fullName>Marketing - The Bay</fullName>
                </value>
                <value>
                    <fullName>Marketing - LT</fullName>
                </value>
                <value>
                    <fullName>Marketing - Saks</fullName>
                </value>
                <value>
                    <fullName>Marketing - Off 5th</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Click_To_Dial__c</fullName>
        <label>Click To Dial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_Marketing__c</fullName>
        <description>Customer would like to receive email marketing</description>
        <inlineHelpText>Customer would like to receive email marketing</inlineHelpText>
        <label>Email Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt In</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Manager_Cell__c</fullName>
        <label>General Manager Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Manager__c</fullName>
        <label>General Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Contact__c</fullName>
        <description>Checks if the contact is only a phone number</description>
        <formula>OR (
OR (
BEGINS(LastName, &quot;+&quot;),
BEGINS(LastName, &quot;1&quot;),
BEGINS(LastName, &quot;2&quot;),
BEGINS(LastName, &quot;3&quot;),
BEGINS(LastName, &quot;4&quot;),
BEGINS(LastName, &quot;5&quot;),
BEGINS(LastName, &quot;6&quot;),
BEGINS(LastName, &quot;7&quot;),
BEGINS(LastName, &quot;8&quot;),
BEGINS(LastName, &quot;9&quot;)
) &amp;&amp; ISBLANK(FirstName),
OR (
BEGINS(Phone, &quot;888&quot;),
BEGINS(Phone, &quot;800&quot;),
BEGINS(Phone, &quot;866&quot;),
BEGINS(Phone, &quot;877&quot;),
BEGINS(Phone, &quot;855&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invalid Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_UCID_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to specify whether a pending update is coming from UCID</description>
        <label>Is UCID Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_System_Update__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <description>The System that provided the latest Contact information</description>
        <inlineHelpText>The System that provided the latest Contact information</inlineHelpText>
        <label>Latest System Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>UCID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Number__c</fullName>
        <label>Loyalty Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Tier__c</fullName>
        <label>Loyalty Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Associate/Retiree</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>PLCC non-Premier</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Marketing__c</fullName>
        <description>Customer would like to receive physical mail marketing</description>
        <inlineHelpText>Customer would like to receive physical mail marketing</inlineHelpText>
        <label>Mail Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt In</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Email__c</fullName>
        <description>Email of the recipient when an order is shipped</description>
        <inlineHelpText>Email of the recipient when an order is shipped</inlineHelpText>
        <label>Mailing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mailing_First_Name__c</fullName>
        <description>First Name of the recipient when an order is shipped</description>
        <inlineHelpText>First Name of the recipient when an order is shipped</inlineHelpText>
        <label>Mailing First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Last_Name__c</fullName>
        <description>Last Name of the recipient when an order is shipped</description>
        <inlineHelpText>Last Name of the recipient when an order is shipped</inlineHelpText>
        <label>Mailing Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Phone__c</fullName>
        <description>Phone of the recipient when an order is shipped</description>
        <inlineHelpText>Phone of the recipient when an order is shipped</inlineHelpText>
        <label>Mailing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Used in Search UI for simplicity, should not be on any page layouts</description>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Formula__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Marketing__c</fullName>
        <description>Customer would like to receive phone marketing</description>
        <inlineHelpText>Customer would like to receive phone marketing</inlineHelpText>
        <label>Phone Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt In</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Alpha__c</fullName>
        <label>Store Alpha</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <label>Store Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Updated Modern</fullName>
                </value>
                <value>
                    <fullName>Balanced Loyalist</fullName>
                </value>
                <value>
                    <fullName>Classic Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate Diverse</fullName>
                </value>
                <value>
                    <fullName>Boca</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Silver-S</fullName>
                </value>
                <value>
                    <fullName>Silver-M</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Gold-S</fullName>
                </value>
                <value>
                    <fullName>Gold-M</fullName>
                </value>
                <value>
                    <fullName>Gold-L</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Platinum-M</fullName>
                </value>
                <value>
                    <fullName>Platinum-L</fullName>
                </value>
                <value>
                    <fullName>Platinum Better</fullName>
                </value>
                <value>
                    <fullName>Platinum Better-S</fullName>
                </value>
                <value>
                    <fullName>Platinum Better-M</fullName>
                </value>
                <value>
                    <fullName>Platinum Better-L</fullName>
                </value>
                <value>
                    <fullName>Platinum Better-XL</fullName>
                </value>
                <value>
                    <fullName>Flagship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Origin__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <description>System of Origin where this record was created</description>
        <inlineHelpText>System of Origin where this record was created</inlineHelpText>
        <label>System Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>UCID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCID_Number__c</fullName>
        <description>External ID from UCID (Contact MDM)</description>
        <externalId>true</externalId>
        <label>UCID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID_Update_Date__c</fullName>
        <description>Last time this Contact was updated to/from UCID</description>
        <inlineHelpText>Last time this Contact was updated to/from UCID</inlineHelpText>
        <label>UCID Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <description>Business Unit concatenated with UCID number for a unique external ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Business Unit concatenated with UCID number for a unique external ID</inlineHelpText>
        <label>Unique External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>HBC_Phonebook</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>HBC Phonebook</value>
        </filters>
        <label>HBC Phonebook</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Stores_Husdson_s_Bay</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>General_Manager__c</columns>
        <columns>General_Manager_Cell__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Hudson&apos;s Bay</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.HBC_Asset</value>
        </filters>
        <label>Stores - Husdson&apos;s Bay</label>
    </listViews>
    <listViews>
        <fullName>Stores_Lord_Taylor</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>General_Manager__c</columns>
        <columns>General_Manager_Cell__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Lord + Taylor</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.HBC_Asset</value>
        </filters>
        <label>Stores - Lord + Taylor</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>HBC_Asset</fullName>
        <active>true</active>
        <label>HBC Asset</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Name_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 Is_UCID_Update__c = FALSE,
Ischanged(FirstName),
Ischanged(LastName),
NOT(isblank(PRIORVALUE(FirstName))))</errorConditionFormula>
        <errorMessage>Only edit the information if the customer changed both their first and last name. If not, please do a Contact Search to link the customer to the case. (Error Contact-01)</errorMessage>
    </validationRules>
</CustomObject>